Added Login Module and added few goodies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
     <md-list>
       <md-list-item><a routerLink="/" routerLinkActive="active">Home</a></md-list-item>
       <md-list-item><a routerLink="/lost" routerLinkActive="active">404</a></md-list-item>
+      <md-list-item><a routerLink="/loginpage" routerLinkActive="active">Login Page</a></md-list-item>
+      <md-list-item><a href="/swagger-ui.html">API Access</a></md-list-item>
     </md-list>
     <p>I fight for the user</p>
+    <p>Welcome {{user.lastName}} </p>
   </md-sidenav>
 
   <md-toolbar color="primary">
@@ -17,6 +20,7 @@
     {{title}}
     <span class="app-toolbar-filler"></span>
     <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
+
   </md-toolbar>
 
   <div class="app-content">
