--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,3 +51,24 @@ md-sidenav-layout.m2app-dark {
   bottom: 20px;
   right: 20px;
 }
+
+
+.app-spinner {
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+}
+
+.app-input-icon {
+  font-size: 16px;
+}
+
+.app-list {
+  border: 1px solid rgba(0,0,0,0.12);
+  width: 350px;
+  margin: 20px;
+}
+
+.app-progress {
+  margin: 20px;
+}
