--- a/src/app/lost/lost.component.html
+++ b/src/app/lost/lost.component.html
@@ -33,7 +33,7 @@
 
   <md-input>
     <md-placeholder>
-      <i class="material-icons app-input-icon">android</i> Favorite phone
+        <i class="material-icons app-input-icon">perm_identity</i> User Name
     </md-placeholder>
   </md-input>
 
