Updated the hrefs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <md-list-item><a routerLink="/lost" routerLinkActive="active">404</a></md-list-item>
       <md-list-item><a routerLink="/loginpage" routerLinkActive="active">Login Page</a></md-list-item>
       <md-list-item><a href="/swagger-ui.html">API Access</a></md-list-item>
+      <md-list-item><a href="https://github.com/reflexdemon/shop">Git Hub</a></md-list-item>
     </md-list>
     <p>I fight for the user</p>
     <p>Welcome {{user.lastName}} </p>
