Updated the hrefs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <p>
   <md-card>
     <div class="button-row">
-        <button md-raised-button click="openCode()">Code</button>
+        <button md-raised-button (click)="openCode()">Code</button>
     </div>
   </md-card>
 </p>
