--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,12 @@
     <h2>Navigation</h2>
     <md-list>
       <md-list-item><a routerLink="/" routerLinkActive="active">Home</a></md-list-item>
-      <md-list-item><a routerLink="/lost" routerLinkActive="active">404</a></md-list-item>
+      <!-- <md-list-item><a routerLink="/lost" routerLinkActive="active">404</a></md-list-item> -->
       <md-list-item><a routerLink="/loginpage" routerLinkActive="active">Login Page</a></md-list-item>
       <md-list-item><a href="/swagger-ui.html">API Access</a></md-list-item>
+      <md-list-item><a href="/logout">Logout</a></md-list-item>
       <md-list-item><a href="https://github.com/reflexdemon/shop">Git Hub</a></md-list-item>
     </md-list>
-    <p>I fight for the user</p>
     <p>Welcome {{user.lastName}} </p>
   </md-sidenav>
 
@@ -30,6 +30,6 @@
 
 </md-sidenav-layout>
 
-<span class="app-action" [class.m2app-dark]="isDarkTheme">
+<!-- <span class="app-action" [class.m2app-dark]="isDarkTheme">
   <button md-fab><md-icon>check circle</md-icon></button>
-</span>
+</span> -->
