Added some documentation to the home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,40 @@
 <p>
   <md-card>
+    <h1>Shop API Demo</h1>
+    <p>
+      This is an example project to demo the usage of one of te most popular Java Framwork and my favorite Java Script framwork.
+    </p>
+    <p>The tech stack for this is as follows,</p>
+    <md-tab-group>
+      <md-tab label="Frontend">
+        <h2>Frontend</h2>
+        <p>
+      <md-list>
+       <md-list-item> Angular 2 </md-list-item>
+       <md-list-item> Yarn </md-list-item>
+       <md-list-item> Angular Materials </md-list-item>
+       <md-list-item> ... </md-list-item>
+      </md-list>
+    </p>
+      </md-tab>
+      <md-tab label="Backend">
+        <h2>Backend</h2>
+        <p>
+      <md-list>
+       <md-list-item> Java </md-list-item>
+       <md-list-item> Spring Framework </md-list-item>
+       <md-list-item> Spring Boot </md-list-item>
+       <md-list-item> Spring Security </md-list-item>
+       <md-list-item> Spring Data / Mango </md-list-item>
+       <md-list-item> ... </md-list-item>
+      </md-list>
+    </p>
+      </md-tab>
+    </md-tab-group>
+
+
+
+
     <div class="button-row">
         <button md-raised-button (click)="openCode()">Code</button>
     </div>
