--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,9 +23,9 @@
 
           <md-card-actions align="end">
             <button md-button md-raised-button color="primary" type="submit">Sign In</button>
-            <button md-button>Sign Up</button>
+            <a routerLink="/signup" routerLinkActive="active" md-button>Sign Up</a>
           </md-card-actions>
-        
+
       </form>
 
     </md-card>
