Handled the Failed login usecase

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en"
->
+<html lang="en"  xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-  <meta http-equiv="refresh" content="0;url=/"/>
+
+
+  <!--<div th:if="${param.logout}">-->
+    <!--You have been logged out.-->
+  <!--</div>-->
+  <meta th:if="${param.error == null}" http-equiv="refresh" content="0;url=/"/>
 </head>
 
 <body>
-<p><a href="/">Redirect</a></p>
+<div th:if="${param.error}">
+  Invalid username and password.
+</div>
+<p><a href="/">Got to Home Page</a></p>
 </body>
 </html>
