--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <md-list-item *ngIf="isAnonymous()"><a routerLink="/loginpage" routerLinkActive="active">Sign In</a></md-list-item>
       <md-list-item><a href="https://github.com/reflexdemon/shop">Git Hub</a></md-list-item>
 
+      <md-list-item *ngIf="!isAnonymous()"><a routerLink="/profile" routerLinkActive="active">View Profile</a></md-list-item>
       <md-list-item *ngIf="!isAnonymous()"><a href="/swagger-ui.html">API Access</a></md-list-item>
       <md-list-item *ngIf="!isAnonymous()"><a href="/logout">Sign Out</a></md-list-item>
     </md-list>
