Added more cool stuff

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,12 +7,36 @@
   <md-card-content>
     <table>
       <tr>
+          <th align="right">Id</th>
+          <td>{{user.id}}</td>
+      </tr>
+      <tr>
           <th align="right">Name</th>
           <td>{{user.firstName}} {{user.lastName}}</td>
       </tr>
       <tr>
           <th align="right">Login ID</th>
           <td>{{user.username}}</td>
+      </tr>
+      <tr>
+          <th align="right">Organization</th>
+          <td>{{user.organization}}</td>
+      </tr>
+      <tr>
+          <th align="right">Email</th>
+          <td>{{user.email}}</td>
+      </tr>
+      <tr>
+          <th align="right">Phone</th>
+          <td>{{user.phone}}</td>
+      </tr>
+      <tr>
+          <th align="right">Mobile</th>
+          <td>{{user.mobile}}</td>
+      </tr>
+      <tr>
+          <th align="right">Pricing Tag</th>
+          <td>{{user.pricingTag}}</td>
       </tr>
     </table>
   </md-card-content>
