--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,3 +1,46 @@
 <p>
-  sign-up works!
+  <md-card>
+  <md-card-header>
+    <md-card-title>Sign Up</md-card-title>
+    <md-card-subtitle>Please create a profile to gain access to the API</md-card-subtitle>
+  </md-card-header>
+  <md-card-content>
+    <table>
+      <tr>
+          <th align="right">Id</th>
+          <td>Auto Generated</td>
+      </tr>
+      <tr>
+          <th align="right">First Name</th>
+          <td></td>
+      </tr>
+      <tr>
+          <th align="right">User Name</th>
+          <td></td>
+      </tr>
+      <tr>
+          <th align="right">Organization</th>
+          <td></td>
+      </tr>
+      <tr>
+          <th align="right">Email</th>
+          <td></td>
+      </tr>
+      <tr>
+          <th align="right">Phone</th>
+          <td></td>
+      </tr>
+      <tr>
+          <th align="right">Mobile</th>
+          <td></td>
+      </tr>
+      <tr>
+          <th align="right">Pricing Tag</th>
+          <td></td>
+      </tr>
+    </table>
+  </md-card-content>
+  <md-card-actions>
+    <a routerLink="/" routerLinkActive="active" md-button>Back</a>
+  </md-card-actions>
 </p>
