--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,23 @@
     </button>
     {{title}}
     <span class="app-toolbar-filler"></span>
+    <button md-icon-button [mdMenuTriggerFor]="menu">
+      <md-icon>more_vert</md-icon>
+    </button>
+    <md-menu #menu="mdMenu">
+      <button md-menu-item>
+        <md-icon>dialpad</md-icon>
+        <span>Redial</span>
+      </button>
+      <button md-menu-item disabled>
+        <md-icon>voicemail</md-icon>
+        <span>Check voicemail</span>
+      </button>
+      <button md-menu-item>
+        <md-icon>notifications_off</md-icon>
+        <span>Disable alerts</span>
+      </button>
+    </md-menu>
 
     <!-- <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button> -->
     <!-- Anonymous  User-->
@@ -30,7 +47,7 @@
     </p>
 
     <!-- Logged In User-->
-    <p *ngIf="!isAnonymous()">Welcome, {{user.firstName}} <a *ngIf="!isAnonymous()" href="/logout" md-button>Sign Out</a></p>
+    <p *ngIf="!isAnonymous()">Welcome, {{user.firstName}} <a href="/logout" md-button>Sign Out</a></p>
   </md-toolbar>
 
   <div class="app-content">
