--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,46 +1,63 @@
 <p>
   <md-card>
   <md-card-header>
-    <md-card-title>Sign Up</md-card-title>
+    <md-card-title><i class="material-icons app-input-icon" style="font-size: 48px;">account_circle</i> Sign Up</md-card-title>
     <md-card-subtitle>Please create a profile to gain access to the API</md-card-subtitle>
   </md-card-header>
   <md-card-content>
-    <table>
+
+
+
+    <table class="signup-full-width" cellspacing="0">
       <tr>
-          <th align="right">Id</th>
-          <td>Auto Generated</td>
+          <td><md-input class="signup-full-width" placeholder="First name"></md-input></td>
+          <td><md-input class="signup-full-width" placeholder="Last name"></md-input></td>
       </tr>
       <tr>
-          <th align="right">First Name</th>
-          <td></td>
+          <td>
+            <md-input class="signup-full-width">
+              <md-placeholder>
+                  <i class="material-icons app-input-icon">perm_identity</i> User Name
+              </md-placeholder>
+            </md-input>
+          </td>
       </tr>
       <tr>
-          <th align="right">User Name</th>
-          <td></td>
+          <td>
+            <md-input class="signup-full-width" placeholder="Organization"></md-input>
+          </td>
       </tr>
       <tr>
-          <th align="right">Organization</th>
-          <td></td>
+          <td>
+            <md-input type="email" class="signup-full-width" placeholder="Email Address"></md-input>
+          </td>
       </tr>
       <tr>
-          <th align="right">Email</th>
-          <td></td>
+        <td>
+          <md-input type="tel" class="signup-full-width" placeholder="Phone"></md-input>
+        </td>
       </tr>
       <tr>
-          <th align="right">Phone</th>
-          <td></td>
+        <td>
+          <md-input type="tel" class="signup-full-width" placeholder="Mobile"></md-input>
+        </td>
       </tr>
       <tr>
-          <th align="right">Mobile</th>
-          <td></td>
-      </tr>
-      <tr>
-          <th align="right">Pricing Tag</th>
-          <td></td>
+          <td colspan="2">
+            <p>
+              Please choose the tag that you wish to sign up for.
+          </p>
+             <md-radio-group class="signup-radio-group" [(ngModel)]="userTag">
+            <md-radio-button class="signup-radio-button" *ngFor="let tag of tags" [value]="tag">
+              {{tag}}
+            </md-radio-button>
+          </md-radio-group>
+          </td>
       </tr>
     </table>
   </md-card-content>
   <md-card-actions>
     <a routerLink="/" routerLinkActive="active" md-button>Back</a>
   </md-card-actions>
+</md-card>
 </p>
