Added the Product Listing First page with pagenation

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -91,7 +91,7 @@
     </table>
   </md-card-content>
   <md-card-actions>
-    <button md-raised-button md-tooltip="Click for freedom!">SUBMIT</button>
+    <button md-raised-button color="primary" md-tooltip="Click for freedom!">SUBMIT</button>
     <a routerLink="/" routerLinkActive="active" md-button>Back</a>
   </md-card-actions>
 </md-card>
