--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       <md-list-item><a (click)="sidenav.toggle()" href="https://github.com/reflexdemon/shop">Git Hub</a></md-list-item>
 
       <md-list-item *ngIf="!isAnonymous()"><a (click)="sidenav.toggle()" routerLink="/profile" routerLinkActive="active">View Profile</a></md-list-item>
+      <md-list-item *ngIf="!isAnonymous()"><a (click)="sidenav.toggle()" routerLink="/products" routerLinkActive="active">Products</a></md-list-item>
       <md-list-item *ngIf="!isAnonymous()"><a (click)="sidenav.toggle()" href="/swagger-ui.html">API Access</a></md-list-item>
       <md-list-item *ngIf="!isAnonymous()"><a (click)="sidenav.toggle()" href="/logout">Sign Out</a></md-list-item>
     </md-list>
