--- a/src/app/product-listing/product-listing.component.html
+++ b/src/app/product-listing/product-listing.component.html
@@ -1,17 +1,28 @@
-<p>
-  List of Products
-
+<div>
+  <h1>Product Listing</h1>
+  <span *ngIf="!result">
+    <md-progress-bar
+        class="app-progress"
+        mode="indeterminate"
+        aria-label="Loading Please wait"></md-progress-bar>
+  </span>
   <md-grid-list cols="2" *ngIf="result">
     <div>
-      Total Products found is {{result.maxCount}}. You are on page {{result.page}} of {{totalPages}}.
-      <div>
+      I am glad that we found {{result.maxCount}} products.
+      <div class="paging-container">
+      <md-chip-list>
+  <md-chip>
+      <div class="paging-chip">
           <span *ngFor="let page of pages;let isLast=last">
-            <span *ngIf="result.page == page">{{page}}</span>
-            <span *ngIf="result.page != page"> <button  (click)="showPage(page)" md-button>{{page}}</button></span>
+            <span *ngIf="result.page == page"><button class="page-button-selected" md-mini-fab>{{page}}</button></span>
+            <span *ngIf="result.page != page"> <button class="page-button" md-mini-fab (click)="showPage(page)">{{page}}</button></span>
           <!-- <span *ngIf="!isLast">,</span> -->
         </span>
       </div>
-    </div>
+    </md-chip>
+  </md-chip-list>
+  </div>
+  </div>
   <md-grid-tile *ngFor="let product of result.products">
     <!-- Here are the products -->
     <md-card>
@@ -34,4 +45,4 @@
   </md-grid-tile>
 </md-grid-list>
 
-</p>
+</div>
