Made the products searchable

--- a/src/app/product-listing/product-listing.component.html
+++ b/src/app/product-listing/product-listing.component.html
@@ -1,5 +1,6 @@
 <div>
-  <h1>Product Listing</h1>
+  <h1 *ngIf="!keyword">Product Listing</h1>
+  <h1 *ngIf="keyword">Search Results for "{{keyword}}"</h1>
   <span *ngIf="!result">
     <md-progress-bar
         class="app-progress"
