--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,3 +72,27 @@ md-sidenav-layout.m2app-dark {
 .app-progress {
   margin: 20px;
 }
+
+
+.search-input {
+    vertical-align: top;
+    display:inline-block;
+    font-size:0.9em;
+    font-weight:400;
+    border:0;
+    width:250px;
+    height:32px;
+    margin:0;
+    background-color: white;
+    color: black;
+}
+
+.search-button {
+    display:inline-block;
+    border: 1px solid black;
+    border-width:0px 0px 0px 1px;
+    margin:0;
+    height:32px;
+    background-color: white;
+    color: black;
+}
