Updated to the latest Angular and fixed minor bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
       <i class="material-icons app-toolbar-menu">menu</i>
     </button> {{title}}
     <span class="app-toolbar-filler"></span>
+    <a md-button color="info" *ngIf="!isAnonymous()" routerLink="/products" routerLinkActive="active">Products</a>
     <button md-icon-button [mdMenuTriggerFor]="menu">
       <md-icon>more_vert</md-icon>
     </button>
@@ -41,9 +42,9 @@
 
     <md-toolbar-row>
       <md-input-container>
-        <input md-input placeholder="Search" class="search-input" #keywordInput>
+        <input md-input placeholder="Search" class="search-input" #keywordInput (keyup.enter)="searchWith(keywordInput.value)">
       </md-input-container>
-      <button md-raised-button color="primary" class="search-button" (click)="searchWith(keywordInput.value)">GO</button>
+      <button md-raised-button color="warn" class="search-button" (click)="searchWith(keywordInput.value)">GO</button>
     </md-toolbar-row>
   </md-toolbar>
 
