--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,6 +93,6 @@ md-sidenav-layout.m2app-dark {
     border-width:0px 0px 0px 1px;
     margin:0;
     height:32px;
-    background-color: white;
-    color: black;
+    // background-color: white;
+    // color: black;
 }
