--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
 
 
     <div class="button-row">
-        <button md-raised-button (click)="openCode()">Code</button>
+        <button md-raised-button (click)="openCode()" color="primary">Code</button>
     </div>
   </md-card>
 </p>
