--- a/src/app/product-listing/product-listing.component.html
+++ b/src/app/product-listing/product-listing.component.html
@@ -54,7 +54,7 @@
               </p>
             </md-card-content>
             <md-card-actions>
-              <button md-raised-button md-button color="primary" md-tooltip="Adds item to the cart!" (click)="addToCart(product, 1)">Add to Cart</button>
+              <button md-raised-button md-button color="primary" md-tooltip="Adds item to the cart!" (click)="addToCart(product, 1)"><md-icon>add_shopping_cart</md-icon> Add to Cart</button>
             </md-card-actions>
           </md-card>
         <!--</md-grid-tile>-->
