--- a/src/app/product-listing/add-to-cart-dialog.html
+++ b/src/app/product-listing/add-to-cart-dialog.html
@@ -1,10 +1,6 @@
-<p>
+<p class="add-to-cart-dialog">
+    <md-toolbar color="primary">Item Added successfully!</md-toolbar>
     <md-card>
-        <md-card-header>
-            <md-card-title>
-                Item Added successfully!
-            </md-card-title>
-        </md-card-header>
         <md-card-content>
             Product Added to cart. Do you want to continue to cart?
         </md-card-content>
