Fixed some typos and updated the documentation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,14 @@
   <md-card>
     <h1>Shop API Demo</h1>
     <p>
-      This is an example project to demo the usage of one of te most popular Java Framwork and my favorite Java Script framwork.
+      This is an example project to demo the usage of one of te most popular Java framework and my favorite Java Script framework.
+      <br>
+
+      If you have not <a routerLink="/signup" routerLinkActive="active">
+        <span>signed up</span>
+      </a> for the API, please feel free to <a routerLink="/signup" routerLinkActive="active">
+        <span>sign up</span>
+      </a> to gain access to the live API.
     </p>
     <p>The tech stack for this is as follows,</p>
     <md-tab-group>
