Migrate to angular 4

--- a/src/app/lost/lost.component.html
+++ b/src/app/lost/lost.component.html
@@ -23,26 +23,26 @@
 </md-card>
 
 <md-card class="app-input-section">
-  <md-input placeholder="First name"></md-input>
+  <input placeholder="First name"></input>
 
-  <md-input #nickname placeholder="Nickname" maxlength="50">
+  <input #nickname placeholder="Nickname" maxlength="50">
     <md-hint align="end">
       {{nickname.characterCount}} / 50
     </md-hint>
-  </md-input>
+  </input>
 
-  <md-input>
+  <input>
     <md-placeholder>
         <i class="material-icons app-input-icon">perm_identity</i> User Name
     </md-placeholder>
-  </md-input>
+  </input>
 
-  <md-input placeholder="Motorcycle model">
+  <input placeholder="Motorcycle model">
     <span md-prefix>
       <i class="material-icons app-input-icon">motorcycle</i>
       &nbsp;
     </span>
-  </md-input>
+  </input>
 </md-card>
 
 <md-card>
