--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<md-sidenav-layout [class.m2app-dark]="isDarkTheme">
+<md-sidenav-container [class.m2app-dark]="isDarkTheme">
 
   <md-sidenav #sidenav mode="over" class="app-sidenav">
     <!-- sidenav content -->
@@ -56,7 +56,7 @@
     <router-outlet></router-outlet>
   </div>
 
-</md-sidenav-layout>
+</md-sidenav-container>
 
 <!-- <span class="app-action" [class.m2app-dark]="isDarkTheme">
   <button md-fab><md-icon>check circle</md-icon></button>
