--- a/src/app/lost/lost.component.html
+++ b/src/app/lost/lost.component.html
@@ -23,26 +23,28 @@
 </md-card>
 
 <md-card class="app-input-section">
-  <input placeholder="First name"></input>
-
-  <input #nickname placeholder="Nickname" maxlength="50">
+  
+  <input mdInput placeholder="First name">
+<md-input-container>
+  <input mdInput #nickname placeholder="Nickname" maxlength="50">
     <md-hint align="end">
       {{nickname.characterCount}} / 50
     </md-hint>
-  </input>
-
-  <input>
+  </md-input-container>
+  <md-input-container>
+  <input mdInput>
     <md-placeholder>
         <i class="material-icons app-input-icon">perm_identity</i> User Name
     </md-placeholder>
-  </input>
+  </md-input-container>
 
-  <input placeholder="Motorcycle model">
+  <md-input-container>
+  <input mdInput placeholder="Motorcycle model">
     <span md-prefix>
       <i class="material-icons app-input-icon">motorcycle</i>
       &nbsp;
     </span>
-  </input>
+  </md-input-container>
 </md-card>
 
 <md-card>
