--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -14,66 +14,66 @@
 
     <table class="signup-full-width" cellspacing="0">
       <tr>
-          <td><md-input ngModel  name="firstName" class="signup-full-width" placeholder="First name" required></md-input></td>
-          <td><md-input ngModel  name="lastName" class="signup-full-width" placeholder="Last name"  required></md-input></td>
+          <td><md-input-container><input mdInput ngModel  name="firstName" class="signup-full-width" placeholder="First name" required></md-input-container></td>
+          <td><md-input-container><input mdInput ngModel  name="lastName" class="signup-full-width" placeholder="Last name"  required></md-input-container></td>
       </tr>
       <tr>
           <td>
-            <md-input ngModel  name="organization" class="signup-full-width"  required>
+            <md-input-container><input mdInput ngModel  name="organization" class="signup-full-width"  required>
               <md-placeholder>
                   <i class="material-icons app-input-icon">domain</i> Organization
               </md-placeholder>
-            </md-input>
+            </md-input-container>
           </td>
       </tr>
       <tr>
           <td>
-            <md-input ngModel  name="email" type="email" class="signup-full-width"  required>
+            <md-input-container><input mdInput ngModel  name="email" type="email" class="signup-full-width"  required>
               <md-placeholder>
                   <i class="material-icons app-input-icon">email</i> Email Address
               </md-placeholder>
-            </md-input>
+            </md-input-container>
           </td>
       </tr>
       <tr>
         <td>
-          <md-input ngModel  name="phone" type="tel" class="signup-full-width">
+          <md-input-container><input mdInput ngModel  name="phone" type="tel" class="signup-full-width">
             <md-placeholder>
                 <i class="material-icons app-input-icon">phone</i> Phone
             </md-placeholder>
-          </md-input>
+          </md-input-container>
         </td>
         <td>
-          <md-input ngModel  name="mobile" type="tel" class="signup-full-width">
+          <md-input-container><input mdInput ngModel  name="mobile" type="tel" class="signup-full-width">
             <md-placeholder>
                 <i class="material-icons app-input-icon">stay_current_portrait</i> Mobile
             </md-placeholder>
-          </md-input>
+          </md-input-container>
         </td>
       </tr>
       <tr>
           <td>
-            <md-input ngModel  name="username" class="signup-full-width"  required>
+            <md-input-container><input mdInput ngModel  name="username" class="signup-full-width"  required>
               <md-placeholder>
                   <i class="material-icons app-input-icon">perm_identity</i> User Name
               </md-placeholder>
-            </md-input>
+            </md-input-container>
           </td>
       </tr>
       <tr>
         <td>
-          <md-input ngModel  name="password" type="password" class="signup-full-width"  required>
+          <md-input-container><input mdInput ngModel  name="password" type="password" class="signup-full-width"  required>
             <md-placeholder>
                 <i class="material-icons app-input-icon">fingerprint</i> Password
             </md-placeholder>
-          </md-input>
+          </md-input-container>
         </td>
         <td>
-          <md-input ngModel  name="confirmPassword" type="password" class="signup-full-width"  required>
+          <md-input-container><input mdInput ngModel  name="confirmPassword" type="password" class="signup-full-width"  required>
             <md-placeholder>
                 <i class="material-icons app-input-icon">fingerprint</i> Reenter Password
             </md-placeholder>
-          </md-input>
+          </md-input-container>
         </td>
       </tr>
       <tr>
