Clanup of the code and update UI

--- a/src/app/shared/paging.component.html
+++ b/src/app/shared/paging.component.html
@@ -1,4 +1,4 @@
-<md-chip-list>
+<!--<md-chip-list>
   <md-chip>
     <div class="paging-chip">
       <span *ngFor="let page of pages;let isLast=last">
@@ -11,4 +11,4 @@
       </span>
     </div>
   </md-chip>
-</md-chip-list>
+</md-chip-list>-->
